fixing scroll spacing

--- a/style.css
+++ b/style.css
@@ -133,6 +133,8 @@ a:hover {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-shrink: 0;
+    min-height: 22px;
 }
 
 .listItem:first-of-type {
